# loadiq

./: .gitignore  CHECKPOINT.md  README.md  TASK_LOG.md  agents.md  hacs.json  loadiq  pyproject.toml
config/: example.yaml  local.yaml
custom_components/loadiq/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  services.yaml  storage.py  strings.json
custom_components/loadiq/translations/: en.json
ha_dev/: compose.yaml
ha_dev/template_config/: configuration.yaml  remote_homeassistant.yaml  secrets.example.yaml
ha_dev/template_config/.storage/: auth  auth_provider.homeassistant
notebooks/: segment_visualizer.py
scripts/: ha
src/loadiq/: __init__.py  config.py
src/loadiq/cli/: app.py  main.py
src/loadiq/data/: homeassistant.py
src/loadiq/detection/: segments.py
src/loadiq/preprocessing/: align.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_app.py  test_config.py  test_data_source.py  test_detection.py  test_integration_config_flow.py  test_integration_entities.py  test_preprocessing.py
